--- a/mywebsite/news/templates/news/base.html
+++ b/mywebsite/news/templates/news/base.html
@@ -1,16 +1,16 @@
-{% extends "news/base.html" %}
-{% block title %}My News{%endblock%}
-{% block content %}
-<h1>My News</h1>
-  {% for article in articles %}
-  <h2>
-  <a href="{% url 'news:article_detail' article.id %}">
-    {{ article.headline }}
-  </a>
-  </h2>
-  <p>
-    Published {{ article.publish }} by {{ article.reporter}}
-  </p>
-  {{ article.content|truncatewords:30|linebreaks }}
-  {% endfor%}
-{% endblock%}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>{% block title %}{% endblock%}</title>
+</head>
+<body>
+    <div>
+        {% block content %}
+        {% endblock%}
+    </div>
+    <div>
+        <h2>My News</h2>
+        <p>This is my news site.</p>
+    </div>
+</body>
+</html>
