--- a/mywebsite/news/templates/news/base.html
+++ b/mywebsite/news/templates/news/base.html
@@ -1,7 +1,13 @@
+{% load static %}
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
     <title>{% block title %}{% endblock%}</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="wight=device-wight, initial-scale=1">
+    <link href="{% ststic 'css/style.css' %}" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <div>
