--- a/mywebsite/news/templates/news/base.html
+++ b/mywebsite/news/templates/news/base.html
@@ -1,5 +1,6 @@
 {% load static %}
 
+<html>
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,14 +10,30 @@
     <meta name="viewport" content="wight=device-wight, initial-scale=1">
     <link href="{% ststic 'css/style.css' %}" rel="stylesheet" type="text/css" />
 </head>
+
 <body>
-    <div>
-        {% block content %}
-        {% endblock%}
-    </div>
-    <div>
-        <h2>My News</h2>
-        <p>This is my news site.</p>
-    </div>
+    <header>News site</header>
+    <section>
+        <article>
+            {% block content %}
+            {% endblock %}
+        </article>
+        <nav>
+            <ul>
+                <h2>Navigation bar</h2>
+                <li>
+                    <p>This is my news site.</p>
+                </li>
+
+                <a href="{% url 'news:article_list' %}">
+                    Home
+                </a>
+            </ul>
+        </nav>
+    </section>
+    <footer>
+        Footer
+    </footer>
+
 </body>
 </html>
