--- a/mywebsite/news/templates/news/article/list.html
+++ b/mywebsite/news/templates/news/article/list.html
@@ -10,7 +10,7 @@
     {{ article.headline }}
   </a>
   </h2>
-  <p>
+  <p class="pdate">
     Published {{ article.publish }} by {{ article.reporter}}
   </p>
   {{ article.content|truncatewords:30|linebreaks }}
