--- a/mywebsite/news/templates/news/article/detail.html
+++ b/mywebsite/news/templates/news/article/detail.html
@@ -4,7 +4,7 @@
 
 {% block content %}
   <h1>{{ article.headline }}</h1>
-  <p>
+  <p class="pdate">
     Published {{ article.publish }} by {{ article.reporter }}
   </p>
   {{ article.content }}
