--- a/mywebsite/news/templates/news/base.html
+++ b/mywebsite/news/templates/news/base.html
@@ -8,7 +8,7 @@
     <title>{% block title %}{% endblock%}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="wight=device-wight, initial-scale=1">
-    <link href="{% ststic 'css/style.css' %}" rel="stylesheet" type="text/css" />
+    <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
