--- a/mywebsite/news/templates/news/article/list.html
+++ b/mywebsite/news/templates/news/article/list.html
@@ -6,7 +6,7 @@
 <h1>My News</h1>
   {% for article in articles %}
   <h2>
-  <a href="{% url 'news:article_detail' article.id %}">
+  <a href="{{ article.get_absolute_url }}">
     {{ article.headline }}
   </a>
   </h2>
