--- a/mywebsite/news/templates/news/article/list.html
+++ b/mywebsite/news/templates/news/article/list.html
@@ -15,5 +15,5 @@
   </p>
   {{ article.content|truncatewords:30|linebreaks }}
   {% endfor %}
-  {% include "pagination.html" with page=articles %}
+  {% include "pagination.html" with page=page_obj %}
 {% endblock %}
